module_2_part_a/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    GARBAGE

Grammar

Rule 0     S' -> start
Rule 1     start -> table2
Rule 2     handleSup2 -> OPENHREF CONTENT CLOSEHREF CLOSESUP skiptable2
Rule 3     handleSup2 -> skiptable2
Rule 4     handleSup2 -> <empty>
Rule 5     printcontent2 -> CONTENT
Rule 6     printcontent2 -> <empty>
Rule 7     printmonthcontent -> CONTENT
Rule 8     printmonthcontent -> <empty>
Rule 9     printdatecontent -> CONTENT
Rule 10    printdatecontent -> <empty>
Rule 11    skiptable2 -> printcontent2 skiptable2
Rule 12    skiptable2 -> OPENHREF skiptable2
Rule 13    skiptable2 -> CLOSEHREF skiptable2
Rule 14    skiptable2 -> OPENIMG skiptable2
Rule 15    skiptable2 -> OPENSPAN skiptable2
Rule 16    skiptable2 -> CLOSESPAN skiptable2
Rule 17    skiptable2 -> OPENDIV skiptable2
Rule 18    skiptable2 -> CLOSEDIV skiptable2
Rule 19    skiptable2 -> OPENBOLD skiptable2
Rule 20    skiptable2 -> CLOSEBOLD skiptable2
Rule 21    skiptable2 -> OPENSUP handleSup2
Rule 22    skiptable2 -> CLOSESUP skiptable2
Rule 23    skiptable2 -> OPENSTYLE skiptable2
Rule 24    skiptable2 -> CLOSESTYLE skiptable2
Rule 25    skiptable2 -> OPENUL skiptable2
Rule 26    skiptable2 -> CLOSEUL skiptable2
Rule 27    skiptable2 -> OPENLI skiptable2
Rule 28    skiptable2 -> CLOSELI skiptable2
Rule 29    skiptable2 -> OPENP skiptable2
Rule 30    skiptable2 -> CLOSEP skiptable2
Rule 31    skiptable2 -> OPENH3 OPENSPAN printmonthcontent CLOSESPAN skiptable2
Rule 32    skiptable2 -> OPENH4 OPENSPAN printdatecontent CLOSESPAN skiptable2
Rule 33    skiptable2 -> CLOSEH3 skiptable2
Rule 34    skiptable2 -> CLOSEH4 skiptable2
Rule 35    skiptable2 -> CLOSEH2 skiptable2
Rule 36    skiptable2 -> OPENH2
Rule 37    skiptable2 -> <empty>
Rule 38    table2 -> TABLE2 skiptable2
Rule 39    empty -> <empty>
Rule 40    content -> CONTENT
Rule 41    content -> empty

Terminals, with rules where they appear

CLOSEBOLD            : 20
CLOSEDIV             : 18
CLOSEH2              : 35
CLOSEH3              : 33
CLOSEH4              : 34
CLOSEHREF            : 2 13
CLOSELI              : 28
CLOSEP               : 30
CLOSESPAN            : 16 31 32
CLOSESTYLE           : 24
CLOSESUP             : 2 22
CLOSEUL              : 26
CONTENT              : 2 5 7 9 40
GARBAGE              : 
OPENBOLD             : 19
OPENDIV              : 17
OPENH2               : 36
OPENH3               : 31
OPENH4               : 32
OPENHREF             : 2 12
OPENIMG              : 14
OPENLI               : 27
OPENP                : 29
OPENSPAN             : 15 31 32
OPENSTYLE            : 23
OPENSUP              : 21
OPENUL               : 25
TABLE2               : 38
error                : 

Nonterminals, with rules where they appear

content              : 
empty                : 41
handleSup2           : 21
printcontent2        : 11
printdatecontent     : 32
printmonthcontent    : 31
skiptable2           : 2 3 11 12 13 14 15 16 17 18 19 20 22 23 24 25 26 27 28 29 30 31 32 33 34 35 38
start                : 0
table2               : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . table2
    (38) table2 -> . TABLE2 skiptable2

    TABLE2          shift and go to state 3

    start                          shift and go to state 1
    table2                         shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> table2 .

    $end            reduce using rule 1 (start -> table2 .)


state 3

    (38) table2 -> TABLE2 . skiptable2
    (11) skiptable2 -> . printcontent2 skiptable2
    (12) skiptable2 -> . OPENHREF skiptable2
    (13) skiptable2 -> . CLOSEHREF skiptable2
    (14) skiptable2 -> . OPENIMG skiptable2
    (15) skiptable2 -> . OPENSPAN skiptable2
    (16) skiptable2 -> . CLOSESPAN skiptable2
    (17) skiptable2 -> . OPENDIV skiptable2
    (18) skiptable2 -> . CLOSEDIV skiptable2
    (19) skiptable2 -> . OPENBOLD skiptable2
    (20) skiptable2 -> . CLOSEBOLD skiptable2
    (21) skiptable2 -> . OPENSUP handleSup2
    (22) skiptable2 -> . CLOSESUP skiptable2
    (23) skiptable2 -> . OPENSTYLE skiptable2
    (24) skiptable2 -> . CLOSESTYLE skiptable2
    (25) skiptable2 -> . OPENUL skiptable2
    (26) skiptable2 -> . CLOSEUL skiptable2
    (27) skiptable2 -> . OPENLI skiptable2
    (28) skiptable2 -> . CLOSELI skiptable2
    (29) skiptable2 -> . OPENP skiptable2
    (30) skiptable2 -> . CLOSEP skiptable2
    (31) skiptable2 -> . OPENH3 OPENSPAN printmonthcontent CLOSESPAN skiptable2
    (32) skiptable2 -> . OPENH4 OPENSPAN printdatecontent CLOSESPAN skiptable2
    (33) skiptable2 -> . CLOSEH3 skiptable2
    (34) skiptable2 -> . CLOSEH4 skiptable2
    (35) skiptable2 -> . CLOSEH2 skiptable2
    (36) skiptable2 -> . OPENH2
    (37) skiptable2 -> .
    (5) printcontent2 -> . CONTENT
    (6) printcontent2 -> .

  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for OPENIMG resolved as shift
  ! shift/reduce conflict for OPENSPAN resolved as shift
  ! shift/reduce conflict for CLOSESPAN resolved as shift
  ! shift/reduce conflict for OPENDIV resolved as shift
  ! shift/reduce conflict for CLOSEDIV resolved as shift
  ! shift/reduce conflict for OPENBOLD resolved as shift
  ! shift/reduce conflict for CLOSEBOLD resolved as shift
  ! shift/reduce conflict for OPENSUP resolved as shift
  ! shift/reduce conflict for CLOSESUP resolved as shift
  ! shift/reduce conflict for OPENSTYLE resolved as shift
  ! shift/reduce conflict for CLOSESTYLE resolved as shift
  ! shift/reduce conflict for OPENUL resolved as shift
  ! shift/reduce conflict for CLOSEUL resolved as shift
  ! shift/reduce conflict for OPENLI resolved as shift
  ! shift/reduce conflict for CLOSELI resolved as shift
  ! shift/reduce conflict for OPENP resolved as shift
  ! shift/reduce conflict for CLOSEP resolved as shift
  ! shift/reduce conflict for OPENH3 resolved as shift
  ! shift/reduce conflict for OPENH4 resolved as shift
  ! shift/reduce conflict for CLOSEH3 resolved as shift
  ! shift/reduce conflict for CLOSEH4 resolved as shift
  ! shift/reduce conflict for CLOSEH2 resolved as shift
  ! shift/reduce conflict for OPENH2 resolved as shift
  ! shift/reduce conflict for CONTENT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 6 (printcontent2 -> .)
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    OPENIMG         shift and go to state 8
    OPENSPAN        shift and go to state 9
    CLOSESPAN       shift and go to state 10
    OPENDIV         shift and go to state 11
    CLOSEDIV        shift and go to state 12
    OPENBOLD        shift and go to state 13
    CLOSEBOLD       shift and go to state 14
    OPENSUP         shift and go to state 15
    CLOSESUP        shift and go to state 16
    OPENSTYLE       shift and go to state 17
    CLOSESTYLE      shift and go to state 18
    OPENUL          shift and go to state 19
    CLOSEUL         shift and go to state 20
    OPENLI          shift and go to state 21
    CLOSELI         shift and go to state 22
    OPENP           shift and go to state 23
    CLOSEP          shift and go to state 24
    OPENH3          shift and go to state 25
    OPENH4          shift and go to state 26
    CLOSEH3         shift and go to state 27
    CLOSEH4         shift and go to state 28
    CLOSEH2         shift and go to state 29
    OPENH2          shift and go to state 30
    CONTENT         shift and go to state 31
    $end            reduce using rule 6 (printcontent2 -> .)

  ! $end            [ reduce using rule 37 (skiptable2 -> .) ]
  ! OPENHREF        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEHREF       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENIMG         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSPAN        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESPAN       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENDIV         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEDIV        [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENBOLD        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEBOLD       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSUP         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESUP        [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSTYLE       [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESTYLE      [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENUL          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEUL         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENLI          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSELI         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENP           [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEP          [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH3          [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH4          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH3         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH4         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH2         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH2          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CONTENT         [ reduce using rule 6 (printcontent2 -> .) ]

    skiptable2                     shift and go to state 4
    printcontent2                  shift and go to state 5

state 4

    (38) table2 -> TABLE2 skiptable2 .

    $end            reduce using rule 38 (table2 -> TABLE2 skiptable2 .)


state 5

    (11) skiptable2 -> printcontent2 . skiptable2
    (11) skiptable2 -> . printcontent2 skiptable2
    (12) skiptable2 -> . OPENHREF skiptable2
    (13) skiptable2 -> . CLOSEHREF skiptable2
    (14) skiptable2 -> . OPENIMG skiptable2
    (15) skiptable2 -> . OPENSPAN skiptable2
    (16) skiptable2 -> . CLOSESPAN skiptable2
    (17) skiptable2 -> . OPENDIV skiptable2
    (18) skiptable2 -> . CLOSEDIV skiptable2
    (19) skiptable2 -> . OPENBOLD skiptable2
    (20) skiptable2 -> . CLOSEBOLD skiptable2
    (21) skiptable2 -> . OPENSUP handleSup2
    (22) skiptable2 -> . CLOSESUP skiptable2
    (23) skiptable2 -> . OPENSTYLE skiptable2
    (24) skiptable2 -> . CLOSESTYLE skiptable2
    (25) skiptable2 -> . OPENUL skiptable2
    (26) skiptable2 -> . CLOSEUL skiptable2
    (27) skiptable2 -> . OPENLI skiptable2
    (28) skiptable2 -> . CLOSELI skiptable2
    (29) skiptable2 -> . OPENP skiptable2
    (30) skiptable2 -> . CLOSEP skiptable2
    (31) skiptable2 -> . OPENH3 OPENSPAN printmonthcontent CLOSESPAN skiptable2
    (32) skiptable2 -> . OPENH4 OPENSPAN printdatecontent CLOSESPAN skiptable2
    (33) skiptable2 -> . CLOSEH3 skiptable2
    (34) skiptable2 -> . CLOSEH4 skiptable2
    (35) skiptable2 -> . CLOSEH2 skiptable2
    (36) skiptable2 -> . OPENH2
    (37) skiptable2 -> .
    (5) printcontent2 -> . CONTENT
    (6) printcontent2 -> .

  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for OPENIMG resolved as shift
  ! shift/reduce conflict for OPENSPAN resolved as shift
  ! shift/reduce conflict for CLOSESPAN resolved as shift
  ! shift/reduce conflict for OPENDIV resolved as shift
  ! shift/reduce conflict for CLOSEDIV resolved as shift
  ! shift/reduce conflict for OPENBOLD resolved as shift
  ! shift/reduce conflict for CLOSEBOLD resolved as shift
  ! shift/reduce conflict for OPENSUP resolved as shift
  ! shift/reduce conflict for CLOSESUP resolved as shift
  ! shift/reduce conflict for OPENSTYLE resolved as shift
  ! shift/reduce conflict for CLOSESTYLE resolved as shift
  ! shift/reduce conflict for OPENUL resolved as shift
  ! shift/reduce conflict for CLOSEUL resolved as shift
  ! shift/reduce conflict for OPENLI resolved as shift
  ! shift/reduce conflict for CLOSELI resolved as shift
  ! shift/reduce conflict for OPENP resolved as shift
  ! shift/reduce conflict for CLOSEP resolved as shift
  ! shift/reduce conflict for OPENH3 resolved as shift
  ! shift/reduce conflict for OPENH4 resolved as shift
  ! shift/reduce conflict for CLOSEH3 resolved as shift
  ! shift/reduce conflict for CLOSEH4 resolved as shift
  ! shift/reduce conflict for CLOSEH2 resolved as shift
  ! shift/reduce conflict for OPENH2 resolved as shift
  ! shift/reduce conflict for CONTENT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 6 (printcontent2 -> .)
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    OPENIMG         shift and go to state 8
    OPENSPAN        shift and go to state 9
    CLOSESPAN       shift and go to state 10
    OPENDIV         shift and go to state 11
    CLOSEDIV        shift and go to state 12
    OPENBOLD        shift and go to state 13
    CLOSEBOLD       shift and go to state 14
    OPENSUP         shift and go to state 15
    CLOSESUP        shift and go to state 16
    OPENSTYLE       shift and go to state 17
    CLOSESTYLE      shift and go to state 18
    OPENUL          shift and go to state 19
    CLOSEUL         shift and go to state 20
    OPENLI          shift and go to state 21
    CLOSELI         shift and go to state 22
    OPENP           shift and go to state 23
    CLOSEP          shift and go to state 24
    OPENH3          shift and go to state 25
    OPENH4          shift and go to state 26
    CLOSEH3         shift and go to state 27
    CLOSEH4         shift and go to state 28
    CLOSEH2         shift and go to state 29
    OPENH2          shift and go to state 30
    CONTENT         shift and go to state 31
    $end            reduce using rule 6 (printcontent2 -> .)

  ! $end            [ reduce using rule 37 (skiptable2 -> .) ]
  ! OPENHREF        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEHREF       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENIMG         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSPAN        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESPAN       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENDIV         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEDIV        [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENBOLD        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEBOLD       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSUP         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESUP        [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSTYLE       [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESTYLE      [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENUL          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEUL         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENLI          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSELI         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENP           [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEP          [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH3          [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH4          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH3         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH4         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH2         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH2          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CONTENT         [ reduce using rule 6 (printcontent2 -> .) ]

    printcontent2                  shift and go to state 5
    skiptable2                     shift and go to state 32

state 6

    (12) skiptable2 -> OPENHREF . skiptable2
    (11) skiptable2 -> . printcontent2 skiptable2
    (12) skiptable2 -> . OPENHREF skiptable2
    (13) skiptable2 -> . CLOSEHREF skiptable2
    (14) skiptable2 -> . OPENIMG skiptable2
    (15) skiptable2 -> . OPENSPAN skiptable2
    (16) skiptable2 -> . CLOSESPAN skiptable2
    (17) skiptable2 -> . OPENDIV skiptable2
    (18) skiptable2 -> . CLOSEDIV skiptable2
    (19) skiptable2 -> . OPENBOLD skiptable2
    (20) skiptable2 -> . CLOSEBOLD skiptable2
    (21) skiptable2 -> . OPENSUP handleSup2
    (22) skiptable2 -> . CLOSESUP skiptable2
    (23) skiptable2 -> . OPENSTYLE skiptable2
    (24) skiptable2 -> . CLOSESTYLE skiptable2
    (25) skiptable2 -> . OPENUL skiptable2
    (26) skiptable2 -> . CLOSEUL skiptable2
    (27) skiptable2 -> . OPENLI skiptable2
    (28) skiptable2 -> . CLOSELI skiptable2
    (29) skiptable2 -> . OPENP skiptable2
    (30) skiptable2 -> . CLOSEP skiptable2
    (31) skiptable2 -> . OPENH3 OPENSPAN printmonthcontent CLOSESPAN skiptable2
    (32) skiptable2 -> . OPENH4 OPENSPAN printdatecontent CLOSESPAN skiptable2
    (33) skiptable2 -> . CLOSEH3 skiptable2
    (34) skiptable2 -> . CLOSEH4 skiptable2
    (35) skiptable2 -> . CLOSEH2 skiptable2
    (36) skiptable2 -> . OPENH2
    (37) skiptable2 -> .
    (5) printcontent2 -> . CONTENT
    (6) printcontent2 -> .

  ! shift/reduce conflict for OPENHREF resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
  ! shift/reduce conflict for OPENIMG resolved as shift
  ! shift/reduce conflict for OPENSPAN resolved as shift
  ! shift/reduce conflict for CLOSESPAN resolved as shift
  ! shift/reduce conflict for OPENDIV resolved as shift
  ! shift/reduce conflict for CLOSEDIV resolved as shift
  ! shift/reduce conflict for OPENBOLD resolved as shift
  ! shift/reduce conflict for CLOSEBOLD resolved as shift
  ! shift/reduce conflict for OPENSUP resolved as shift
  ! shift/reduce conflict for CLOSESUP resolved as shift
  ! shift/reduce conflict for OPENSTYLE resolved as shift
  ! shift/reduce conflict for CLOSESTYLE resolved as shift
  ! shift/reduce conflict for OPENUL resolved as shift
  ! shift/reduce conflict for CLOSEUL resolved as shift
  ! shift/reduce conflict for OPENLI resolved as shift
  ! shift/reduce conflict for CLOSELI resolved as shift
  ! shift/reduce conflict for OPENP resolved as shift
  ! shift/reduce conflict for CLOSEP resolved as shift
  ! shift/reduce conflict for OPENH3 resolved as shift
  ! shift/reduce conflict for OPENH4 resolved as shift
  ! shift/reduce conflict for CLOSEH3 resolved as shift
  ! shift/reduce conflict for CLOSEH4 resolved as shift
  ! shift/reduce conflict for CLOSEH2 resolved as shift
  ! shift/reduce conflict for OPENH2 resolved as shift
  ! shift/reduce conflict for CONTENT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 6 (printcontent2 -> .)
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    OPENIMG         shift and go to state 8
    OPENSPAN        shift and go to state 9
    CLOSESPAN       shift and go to state 10
    OPENDIV         shift and go to state 11
    CLOSEDIV        shift and go to state 12
    OPENBOLD        shift and go to state 13
    CLOSEBOLD       shift and go to state 14
    OPENSUP         shift and go to state 15
    CLOSESUP        shift and go to state 16
    OPENSTYLE       shift and go to state 17
    CLOSESTYLE      shift and go to state 18
    OPENUL          shift and go to state 19
    CLOSEUL         shift and go to state 20
    OPENLI          shift and go to state 21
    CLOSELI         shift and go to state 22
    OPENP           shift and go to state 23
    CLOSEP          shift and go to state 24
    OPENH3          shift and go to state 25
    OPENH4          shift and go to state 26
    CLOSEH3         shift and go to state 27
    CLOSEH4         shift and go to state 28
    CLOSEH2         shift and go to state 29
    OPENH2          shift and go to state 30
    CONTENT         shift and go to state 31
    $end            reduce using rule 6 (printcontent2 -> .)

  ! $end            [ reduce using rule 37 (skiptable2 -> .) ]
  ! OPENHREF        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEHREF       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENIMG         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSPAN        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESPAN       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENDIV         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEDIV        [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENBOLD        [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEBOLD       [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSUP         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESUP        [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENSTYLE       [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSESTYLE      [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENUL          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEUL         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENLI          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSELI         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENP           [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEP          [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH3          [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH4          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH3         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH4         [ reduce using rule 6 (printcontent2 -> .) ]
  ! CLOSEH2         [ reduce using rule 6 (printcontent2 -> .) ]
  ! OPENH2          [ reduce using rule 6 (printcontent2 -> .) ]
  ! CONTENT         [ reduce using rule 6 (printcontent2 -> .) ]

    skiptable2                     shift and go to state 33
    printcontent2                  shift and go to state 5

state 7

    (13) skiptable2 -> CLOSEHREF . skiptable2
    (11) skiptable2 -> . printcontent2 skiptable2
    (12) skiptable2 -> . OPENHREF skiptable2
    (13) skiptable2 -> . CLOSEHREF skiptable2
    (14) skiptable2 -> . OPENIMG skiptable2
    (15) skiptable2 -> . OPENSPAN skiptable2
    (16) skiptable2 -> . CLOSESPAN skiptable2
    (17) skiptable2 -> . OPENDIV skiptable2
    (18) skiptable2 -> . CLOSEDIV skiptable2
    (19) skiptable2 -> . OPENBOLD skiptable2
    (20) skiptable2 -> . CLOSEBOLD skiptable2
    (21) skiptable2 -> . OPENSUP handleSup2
    (22) skiptable2 -> . CLOSESUP skiptable2
    (23) skiptable2 -> . OPENSTYLE skiptable2
    (24) skiptable2 -> . CLOSESTYLE skiptable2
    (25) skiptable2 -> . OPENUL skiptable2
    (26) skiptable2 -> . CLOSEUL skiptable2
    (27) skiptable2 -> . OPENLI skiptable2
    (28) skiptable2 -> . CLOSELI skiptable2
    (29) skiptable2 -> . OPENP skiptable2
    (30) skiptable2 -> . CLOSEP skiptable2
    (31) skiptable2 -> . OPENH3 OPENSPAN printmonthcontent CLOSESPAN skiptable2
    (32) skiptable2 -> . OPENH4 OPENSPAN printdatecontent CLOSESPAN skiptable2
    (33) skiptable2 -> . CLOSEH3 skiptable2
    (34) skiptable2 -> . CLOSEH4 skiptable2
    (35) skiptable2 -> . CLOSEH2 skiptable2
    (36) skiptable2 -> . OPENH2
    (37) skiptable2 -> .
    (5) printcontent2 -> . CONTENT
    (6) printcontent2 -> .
